@@ -1,0 +1,7 @@
+	processor 18f25k80
+
+	CONFIG	XINST=OFF
+	CONFIG	BOREN=OFF
+	CONFIG	WDTEN=OFF
+
+	end
