@@ -1,4 +1,13 @@
 2015-11-23  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gpcofflink.c,
+    gplink/testsuite/gplink.project/asmfiles/config_overlap.asm,
+    gplink/testsuite/gplink.project/hexfiles/config_overlap.hex,
+    gplink/testsuite/gplink.project/lkrfiles/config_overlap.lkr:
+    Fixed bug in gplink: Cannot CONFIG adjacent configuration
+    registers.
+    Thanks to Janis Smedins for the report.
+
+2015-11-23  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * Makefile.in, */Makefile.in:
     Updated the copyright.
   * gpasm/cod.c, gpasm/coff.c, gpasm/coff.h, gpasm/directive.c,
